src/Flan/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Flan.Par
  ( happyError
  , myLexer
  , pProgram
  , pBinding
  , pListBinding
  , pTerm
  , pTerm1
  , pTerm3
  , pTerm2
  , pTypedPattern
  , pPattern
  , pFlanType2
  , pFlanType1
  , pFlanType
  ) where

import Prelude

import qualified Flan.Abs
import Flan.Lex

}

%name pProgram_internal Program
%name pBinding_internal Binding
%name pListBinding_internal ListBinding
%name pTerm_internal Term
%name pTerm1_internal Term1
%name pTerm3_internal Term3
%name pTerm2_internal Term2
%name pTypedPattern_internal TypedPattern
%name pPattern_internal Pattern
%name pFlanType2_internal FlanType2
%name pFlanType1_internal FlanType1
%name pFlanType_internal FlanType
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('        { PT _ (TS _ 1)       }
  ')'        { PT _ (TS _ 2)       }
  ','        { PT _ (TS _ 3)       }
  '->'       { PT _ (TS _ 4)       }
  '/'        { PT _ (TS _ 5)       }
  ':'        { PT _ (TS _ 6)       }
  '='        { PT _ (TS _ 7)       }
  '=>'       { PT _ (TS _ 8)       }
  'False'    { PT _ (TS _ 9)       }
  'True'     { PT _ (TS _ 10)      }
  '['        { PT _ (TS _ 11)      }
  '\\'       { PT _ (TS _ 12)      }
  ']'        { PT _ (TS _ 13)      }
  '_'        { PT _ (TS _ 14)      }
  'else'     { PT _ (TS _ 15)      }
  'if'       { PT _ (TS _ 16)      }
  'then'     { PT _ (TS _ 17)      }
  '|'        { PT _ (TS _ 18)      }
  L_integ    { PT _ (TI _)         }
  L_quoted   { PT _ (TL _)         }
  L_VarIdent { PT _ (T_VarIdent _) }

%%

Integer :: { (Flan.Abs.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Flan.Abs.BNFC'Position, String) }
String   : L_quoted { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

VarIdent :: { (Flan.Abs.BNFC'Position, Flan.Abs.VarIdent) }
VarIdent  : L_VarIdent { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.VarIdent (tokenText $1)) }

Program :: { (Flan.Abs.BNFC'Position, Flan.Abs.Program) }
Program : Term { (fst $1, Flan.Abs.AProgram (fst $1) (snd $1)) }

Binding :: { (Flan.Abs.BNFC'Position, Flan.Abs.Binding) }
Binding
  : '|' TypedPattern '=' Term { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.LetBinding (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }

ListBinding :: { (Flan.Abs.BNFC'Position, [Flan.Abs.Binding]) }
ListBinding
  : {- empty -} { (Flan.Abs.BNFC'NoPosition, []) }
  | Binding ListBinding { (fst $1, (:) (snd $1) (snd $2)) }

Term :: { (Flan.Abs.BNFC'Position, Flan.Abs.Term) }
Term
  : ListBinding '\\' Term { (fst $1, Flan.Abs.Let (fst $1) (snd $1) (snd $3)) }
  | '/' TypedPattern '=>' Term { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.Lam (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'if' Term 'then' Term 'else' Term { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.If (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $6)) }
  | '[' Term ',' Term ']' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.Pair (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | Term1 { (fst $1, (snd $1)) }

Term1 :: { (Flan.Abs.BNFC'Position, Flan.Abs.Term) }
Term1
  : Term1 Term2 { (fst $1, Flan.Abs.App (fst $1) (snd $1) (snd $2)) }
  | Term2 { (fst $1, (snd $1)) }

Term3 :: { (Flan.Abs.BNFC'Position, Flan.Abs.Term) }
Term3
  : VarIdent { (fst $1, Flan.Abs.Var (fst $1) (snd $1)) }
  | 'True' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.ConstTrue (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'False' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.ConstFalse (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1))) }
  | Integer { (fst $1, Flan.Abs.ConstInt (fst $1) (snd $1)) }
  | String { (fst $1, Flan.Abs.ConstStr (fst $1) (snd $1)) }
  | '(' Term ')' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

Term2 :: { (Flan.Abs.BNFC'Position, Flan.Abs.Term) }
Term2 : Term3 { (fst $1, (snd $1)) }

TypedPattern :: { (Flan.Abs.BNFC'Position, Flan.Abs.TypedPattern) }
TypedPattern
  : Pattern ':' FlanType { (fst $1, Flan.Abs.ATypedPattern (fst $1) (snd $1) (snd $3)) }
  | Pattern { (fst $1, Flan.Abs.UntypedPattern (fst $1) (snd $1)) }

Pattern :: { (Flan.Abs.BNFC'Position, Flan.Abs.Pattern) }
Pattern
  : VarIdent { (fst $1, Flan.Abs.PatternVar (fst $1) (snd $1)) }
  | '[' Pattern ',' Pattern ']' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.PatternPair (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | '_' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.PatternWildcard (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1))) }

FlanType2 :: { (Flan.Abs.BNFC'Position, Flan.Abs.FlanType) }
FlanType2
  : VarIdent { (fst $1, Flan.Abs.ValType (fst $1) (snd $1)) }
  | '(' FlanType ')' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

FlanType1 :: { (Flan.Abs.BNFC'Position, Flan.Abs.FlanType) }
FlanType1
  : FlanType1 '->' FlanType { (fst $1, Flan.Abs.FunType (fst $1) (snd $1) (snd $3)) }
  | '[' FlanType ',' FlanType ']' { (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1), Flan.Abs.PairType (uncurry Flan.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | FlanType2 { (fst $1, (snd $1)) }

FlanType :: { (Flan.Abs.BNFC'Position, Flan.Abs.FlanType) }
FlanType : FlanType1 { (fst $1, (snd $1)) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Flan.Abs.Program
pProgram = fmap snd . pProgram_internal

pBinding :: [Token] -> Err Flan.Abs.Binding
pBinding = fmap snd . pBinding_internal

pListBinding :: [Token] -> Err [Flan.Abs.Binding]
pListBinding = fmap snd . pListBinding_internal

pTerm :: [Token] -> Err Flan.Abs.Term
pTerm = fmap snd . pTerm_internal

pTerm1 :: [Token] -> Err Flan.Abs.Term
pTerm1 = fmap snd . pTerm1_internal

pTerm3 :: [Token] -> Err Flan.Abs.Term
pTerm3 = fmap snd . pTerm3_internal

pTerm2 :: [Token] -> Err Flan.Abs.Term
pTerm2 = fmap snd . pTerm2_internal

pTypedPattern :: [Token] -> Err Flan.Abs.TypedPattern
pTypedPattern = fmap snd . pTypedPattern_internal

pPattern :: [Token] -> Err Flan.Abs.Pattern
pPattern = fmap snd . pPattern_internal

pFlanType2 :: [Token] -> Err Flan.Abs.FlanType
pFlanType2 = fmap snd . pFlanType2_internal

pFlanType1 :: [Token] -> Err Flan.Abs.FlanType
pFlanType1 = fmap snd . pFlanType1_internal

pFlanType :: [Token] -> Err Flan.Abs.FlanType
pFlanType = fmap snd . pFlanType_internal
}
