src/Flan/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Flan/Par.y
-----------------------------------------------------------------------------

state 16 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	%start_pBinding_internal -> Binding                (1)
	%start_pListBinding_internal -> ListBinding        (2)
	%start_pTerm_internal -> Term                      (3)
	%start_pTerm1_internal -> Term1                    (4)
	%start_pTerm3_internal -> Term3                    (5)
	%start_pTerm2_internal -> Term2                    (6)
	%start_pTypedPattern_internal -> TypedPattern      (7)
	%start_pPattern_internal -> Pattern                (8)
	%start_pFlanType2_internal -> FlanType2            (9)
	%start_pFlanType1_internal -> FlanType1            (10)
	%start_pFlanType_internal -> FlanType              (11)
	Integer -> L_integ                                 (12)
	String -> L_quoted                                 (13)
	VarIdent -> L_VarIdent                             (14)
	Program -> Term                                    (15)
	Binding -> '|' TypedPattern '=' Term               (16)
	ListBinding ->                                     (17)
	ListBinding -> Binding ListBinding                 (18)
	Term -> ListBinding '\\' Term                      (19)
	Term -> '/' TypedPattern '=>' Term                 (20)
	Term -> 'if' Term 'then' Term 'else' Term          (21)
	Term -> '[' Term ',' Term ']'                      (22)
	Term -> Term1                                      (23)
	Term1 -> Term1 Term2                               (24)
	Term1 -> Term2                                     (25)
	Term3 -> VarIdent                                  (26)
	Term3 -> 'True'                                    (27)
	Term3 -> 'False'                                   (28)
	Term3 -> Integer                                   (29)
	Term3 -> String                                    (30)
	Term3 -> '(' Term ')'                              (31)
	Term2 -> Term3                                     (32)
	TypedPattern -> Pattern ':' FlanType               (33)
	TypedPattern -> Pattern                            (34)
	Pattern -> VarIdent                                (35)
	Pattern -> '[' Pattern ',' Pattern ']'             (36)
	Pattern -> '_'                                     (37)
	FlanType2 -> VarIdent                              (38)
	FlanType2 -> '(' FlanType ')'                      (39)
	FlanType1 -> FlanType1 '->' FlanType               (40)
	FlanType1 -> '[' FlanType ',' FlanType ']'         (41)
	FlanType1 -> FlanType2                             (42)
	FlanType -> FlanType1                              (43)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	'/'            { PT _ (TS _ 5) }
	':'            { PT _ (TS _ 6) }
	'='            { PT _ (TS _ 7) }
	'=>'           { PT _ (TS _ 8) }
	'False'        { PT _ (TS _ 9) }
	'True'         { PT _ (TS _ 10) }
	'['            { PT _ (TS _ 11) }
	'\\'           { PT _ (TS _ 12) }
	']'            { PT _ (TS _ 13) }
	'_'            { PT _ (TS _ 14) }
	'else'         { PT _ (TS _ 15) }
	'if'           { PT _ (TS _ 16) }
	'then'         { PT _ (TS _ 17) }
	'|'            { PT _ (TS _ 18) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }
	L_VarIdent     { PT _ (T_VarIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	%start_pBinding_internal rule  1
	%start_pListBinding_internal rule  2
	%start_pTerm_internal rule  3
	%start_pTerm1_internal rule  4
	%start_pTerm3_internal rule  5
	%start_pTerm2_internal rule  6
	%start_pTypedPattern_internal rule  7
	%start_pPattern_internal rule  8
	%start_pFlanType2_internal rule  9
	%start_pFlanType1_internal rule  10
	%start_pFlanType_internal rule  11
	Integer         rule  12
	String          rule  13
	VarIdent        rule  14
	Program         rule  15
	Binding         rule  16
	ListBinding     rules 17, 18
	Term            rules 19, 20, 21, 22, 23
	Term1           rules 24, 25
	Term3           rules 26, 27, 28, 29, 30, 31
	Term2           rule  32
	TypedPattern    rules 33, 34
	Pattern         rules 35, 36, 37
	FlanType2       rules 38, 39
	FlanType1       rules 40, 41, 42
	FlanType        rule  43

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Program        goto state 51
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 52
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 1

	%start_pBinding_internal -> . Binding               (rule 1)

	'|'            shift, and enter state 48

	Binding        goto state 50

State 2

	%start_pListBinding_internal -> . ListBinding       (rule 2)

	'|'            shift, and enter state 48
	%eof           reduce using rule 17

	Binding        goto state 41
	ListBinding    goto state 49

State 3

	%start_pTerm_internal -> . Term                     (rule 3)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 43
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 4

	%start_pTerm1_internal -> . Term1                   (rule 4)

	'('            shift, and enter state 34
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Term1          goto state 39
	Term3          goto state 32
	Term2          goto state 40

State 5

	%start_pTerm3_internal -> . Term3                   (rule 5)

	'('            shift, and enter state 34
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Term3          goto state 38

State 6

	%start_pTerm2_internal -> . Term2                   (rule 6)

	'('            shift, and enter state 34
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Term3          goto state 32
	Term2          goto state 33

State 7

	%start_pTypedPattern_internal -> . TypedPattern     (rule 7)

	'['            shift, and enter state 25
	'_'            shift, and enter state 26
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 23
	TypedPattern   goto state 27
	Pattern        goto state 28

State 8

	%start_pPattern_internal -> . Pattern               (rule 8)

	'['            shift, and enter state 25
	'_'            shift, and enter state 26
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 23
	Pattern        goto state 24

State 9

	%start_pFlanType2_internal -> . FlanType2           (rule 9)

	'('            shift, and enter state 18
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 22

State 10

	%start_pFlanType1_internal -> . FlanType1           (rule 10)

	'('            shift, and enter state 18
	'['            shift, and enter state 19
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 15
	FlanType1      goto state 21

State 11

	%start_pFlanType_internal -> . FlanType             (rule 11)

	'('            shift, and enter state 18
	'['            shift, and enter state 19
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 15
	FlanType1      goto state 16
	FlanType       goto state 17

State 12

	Integer -> . L_integ                                (rule 12)

	L_integ        shift, and enter state 13


State 13

	Integer -> L_integ .                                (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	','            reduce using rule 12
	'False'        reduce using rule 12
	'True'         reduce using rule 12
	'\\'           reduce using rule 12
	']'            reduce using rule 12
	'else'         reduce using rule 12
	'then'         reduce using rule 12
	'|'            reduce using rule 12
	L_integ        reduce using rule 12
	L_quoted       reduce using rule 12
	L_VarIdent     reduce using rule 12
	%eof           reduce using rule 12


State 14

	FlanType2 -> VarIdent .                             (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38
	'->'           reduce using rule 38
	'='            reduce using rule 38
	'=>'           reduce using rule 38
	']'            reduce using rule 38
	%eof           reduce using rule 38


State 15

	FlanType1 -> FlanType2 .                            (rule 42)

	')'            reduce using rule 42
	','            reduce using rule 42
	'->'           reduce using rule 42
	'='            reduce using rule 42
	'=>'           reduce using rule 42
	']'            reduce using rule 42
	%eof           reduce using rule 42


State 16

	FlanType1 -> FlanType1 . '->' FlanType              (rule 40)
	FlanType -> FlanType1 .                             (rule 43)

	')'            reduce using rule 43
	','            reduce using rule 43
	'->'           shift, and enter state 63
			(reduce using rule 43)

	'='            reduce using rule 43
	'=>'           reduce using rule 43
	']'            reduce using rule 43
	%eof           reduce using rule 43


State 17

	%start_pFlanType_internal -> FlanType .             (rule 11)

	%eof           accept


State 18

	FlanType2 -> '(' . FlanType ')'                     (rule 39)

	'('            shift, and enter state 18
	'['            shift, and enter state 19
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 15
	FlanType1      goto state 16
	FlanType       goto state 65

State 19

	FlanType1 -> '[' . FlanType ',' FlanType ']'        (rule 41)

	'('            shift, and enter state 18
	'['            shift, and enter state 19
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 15
	FlanType1      goto state 16
	FlanType       goto state 64

State 20

	VarIdent -> L_VarIdent .                            (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	','            reduce using rule 14
	'->'           reduce using rule 14
	':'            reduce using rule 14
	'='            reduce using rule 14
	'=>'           reduce using rule 14
	'False'        reduce using rule 14
	'True'         reduce using rule 14
	'\\'           reduce using rule 14
	']'            reduce using rule 14
	'else'         reduce using rule 14
	'then'         reduce using rule 14
	'|'            reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14
	L_VarIdent     reduce using rule 14
	%eof           reduce using rule 14


State 21

	%start_pFlanType1_internal -> FlanType1 .           (rule 10)
	FlanType1 -> FlanType1 . '->' FlanType              (rule 40)

	'->'           shift, and enter state 63
	%eof           accept


State 22

	%start_pFlanType2_internal -> FlanType2 .           (rule 9)

	%eof           accept


State 23

	Pattern -> VarIdent .                               (rule 35)

	','            reduce using rule 35
	':'            reduce using rule 35
	'='            reduce using rule 35
	'=>'           reduce using rule 35
	']'            reduce using rule 35
	%eof           reduce using rule 35


State 24

	%start_pPattern_internal -> Pattern .               (rule 8)

	%eof           accept


State 25

	Pattern -> '[' . Pattern ',' Pattern ']'            (rule 36)

	'['            shift, and enter state 25
	'_'            shift, and enter state 26
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 23
	Pattern        goto state 62

State 26

	Pattern -> '_' .                                    (rule 37)

	','            reduce using rule 37
	':'            reduce using rule 37
	'='            reduce using rule 37
	'=>'           reduce using rule 37
	']'            reduce using rule 37
	%eof           reduce using rule 37


State 27

	%start_pTypedPattern_internal -> TypedPattern .     (rule 7)

	%eof           accept


State 28

	TypedPattern -> Pattern . ':' FlanType              (rule 33)
	TypedPattern -> Pattern .                           (rule 34)

	':'            shift, and enter state 61
	'='            reduce using rule 34
	'=>'           reduce using rule 34
	%eof           reduce using rule 34


State 29

	Term3 -> Integer .                                  (rule 29)

	'('            reduce using rule 29
	')'            reduce using rule 29
	','            reduce using rule 29
	'False'        reduce using rule 29
	'True'         reduce using rule 29
	'\\'           reduce using rule 29
	']'            reduce using rule 29
	'else'         reduce using rule 29
	'then'         reduce using rule 29
	'|'            reduce using rule 29
	L_integ        reduce using rule 29
	L_quoted       reduce using rule 29
	L_VarIdent     reduce using rule 29
	%eof           reduce using rule 29


State 30

	Term3 -> String .                                   (rule 30)

	'('            reduce using rule 30
	')'            reduce using rule 30
	','            reduce using rule 30
	'False'        reduce using rule 30
	'True'         reduce using rule 30
	'\\'           reduce using rule 30
	']'            reduce using rule 30
	'else'         reduce using rule 30
	'then'         reduce using rule 30
	'|'            reduce using rule 30
	L_integ        reduce using rule 30
	L_quoted       reduce using rule 30
	L_VarIdent     reduce using rule 30
	%eof           reduce using rule 30


State 31

	Term3 -> VarIdent .                                 (rule 26)

	'('            reduce using rule 26
	')'            reduce using rule 26
	','            reduce using rule 26
	'False'        reduce using rule 26
	'True'         reduce using rule 26
	'\\'           reduce using rule 26
	']'            reduce using rule 26
	'else'         reduce using rule 26
	'then'         reduce using rule 26
	'|'            reduce using rule 26
	L_integ        reduce using rule 26
	L_quoted       reduce using rule 26
	L_VarIdent     reduce using rule 26
	%eof           reduce using rule 26


State 32

	Term2 -> Term3 .                                    (rule 32)

	'('            reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	'False'        reduce using rule 32
	'True'         reduce using rule 32
	'\\'           reduce using rule 32
	']'            reduce using rule 32
	'else'         reduce using rule 32
	'then'         reduce using rule 32
	'|'            reduce using rule 32
	L_integ        reduce using rule 32
	L_quoted       reduce using rule 32
	L_VarIdent     reduce using rule 32
	%eof           reduce using rule 32


State 33

	%start_pTerm2_internal -> Term2 .                   (rule 6)

	%eof           accept


State 34

	Term3 -> '(' . Term ')'                             (rule 31)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 60
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 35

	Term3 -> 'False' .                                  (rule 28)

	'('            reduce using rule 28
	')'            reduce using rule 28
	','            reduce using rule 28
	'False'        reduce using rule 28
	'True'         reduce using rule 28
	'\\'           reduce using rule 28
	']'            reduce using rule 28
	'else'         reduce using rule 28
	'then'         reduce using rule 28
	'|'            reduce using rule 28
	L_integ        reduce using rule 28
	L_quoted       reduce using rule 28
	L_VarIdent     reduce using rule 28
	%eof           reduce using rule 28


State 36

	Term3 -> 'True' .                                   (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27
	'False'        reduce using rule 27
	'True'         reduce using rule 27
	'\\'           reduce using rule 27
	']'            reduce using rule 27
	'else'         reduce using rule 27
	'then'         reduce using rule 27
	'|'            reduce using rule 27
	L_integ        reduce using rule 27
	L_quoted       reduce using rule 27
	L_VarIdent     reduce using rule 27
	%eof           reduce using rule 27


State 37

	String -> L_quoted .                                (rule 13)

	'('            reduce using rule 13
	')'            reduce using rule 13
	','            reduce using rule 13
	'False'        reduce using rule 13
	'True'         reduce using rule 13
	'\\'           reduce using rule 13
	']'            reduce using rule 13
	'else'         reduce using rule 13
	'then'         reduce using rule 13
	'|'            reduce using rule 13
	L_integ        reduce using rule 13
	L_quoted       reduce using rule 13
	L_VarIdent     reduce using rule 13
	%eof           reduce using rule 13


State 38

	%start_pTerm3_internal -> Term3 .                   (rule 5)

	%eof           accept


State 39

	%start_pTerm1_internal -> Term1 .                   (rule 4)
	Term1 -> Term1 . Term2                              (rule 24)

	'('            shift, and enter state 34
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20
	%eof           accept

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Term3          goto state 32
	Term2          goto state 57

State 40

	Term1 -> Term2 .                                    (rule 25)

	'('            reduce using rule 25
	')'            reduce using rule 25
	','            reduce using rule 25
	'False'        reduce using rule 25
	'True'         reduce using rule 25
	'\\'           reduce using rule 25
	']'            reduce using rule 25
	'else'         reduce using rule 25
	'then'         reduce using rule 25
	'|'            reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25
	L_VarIdent     reduce using rule 25
	%eof           reduce using rule 25


State 41

	ListBinding -> Binding . ListBinding                (rule 18)

	'\\'           reduce using rule 17
	'|'            shift, and enter state 48
	%eof           reduce using rule 17

	Binding        goto state 41
	ListBinding    goto state 59

State 42

	Term -> ListBinding . '\\' Term                     (rule 19)

	'\\'           shift, and enter state 58


State 43

	%start_pTerm_internal -> Term .                     (rule 3)

	%eof           accept


State 44

	Term -> Term1 .                                     (rule 23)
	Term1 -> Term1 . Term2                              (rule 24)

	'('            shift, and enter state 34
	')'            reduce using rule 23
	','            reduce using rule 23
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'\\'           reduce using rule 23
	']'            reduce using rule 23
	'else'         reduce using rule 23
	'then'         reduce using rule 23
	'|'            reduce using rule 23
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20
	%eof           reduce using rule 23

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Term3          goto state 32
	Term2          goto state 57

State 45

	Term -> '/' . TypedPattern '=>' Term                (rule 20)

	'['            shift, and enter state 25
	'_'            shift, and enter state 26
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 23
	TypedPattern   goto state 56
	Pattern        goto state 28

State 46

	Term -> '[' . Term ',' Term ']'                     (rule 22)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 55
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 47

	Term -> 'if' . Term 'then' Term 'else' Term         (rule 21)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 54
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 48

	Binding -> '|' . TypedPattern '=' Term              (rule 16)

	'['            shift, and enter state 25
	'_'            shift, and enter state 26
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 23
	TypedPattern   goto state 53
	Pattern        goto state 28

State 49

	%start_pListBinding_internal -> ListBinding .       (rule 2)

	%eof           accept


State 50

	%start_pBinding_internal -> Binding .               (rule 1)

	%eof           accept


State 51

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 52

	Program -> Term .                                   (rule 15)

	%eof           reduce using rule 15


State 53

	Binding -> '|' TypedPattern . '=' Term              (rule 16)

	'='            shift, and enter state 76


State 54

	Term -> 'if' Term . 'then' Term 'else' Term         (rule 21)

	'then'         shift, and enter state 75


State 55

	Term -> '[' Term . ',' Term ']'                     (rule 22)

	','            shift, and enter state 74


State 56

	Term -> '/' TypedPattern . '=>' Term                (rule 20)

	'=>'           shift, and enter state 73


State 57

	Term1 -> Term1 Term2 .                              (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	','            reduce using rule 24
	'False'        reduce using rule 24
	'True'         reduce using rule 24
	'\\'           reduce using rule 24
	']'            reduce using rule 24
	'else'         reduce using rule 24
	'then'         reduce using rule 24
	'|'            reduce using rule 24
	L_integ        reduce using rule 24
	L_quoted       reduce using rule 24
	L_VarIdent     reduce using rule 24
	%eof           reduce using rule 24


State 58

	Term -> ListBinding '\\' . Term                     (rule 19)

	'('            shift, and enter state 34
	'/'            shift, and enter state 45
	'False'        shift, and enter state 35
	'True'         shift, and enter state 36
	'['            shift, and enter state 46
	'\\'           reduce using rule 17
	'if'           shift, and enter state 47
	'|'            shift, and enter state 48
	L_integ        shift, and enter state 13
	L_quoted       shift, and enter state 37
	L_VarIdent     shift, and enter state 20

	Integer        goto state 29
	String         goto state 30
	VarIdent       goto state 31
	Binding        goto state 41
	ListBinding    goto state 42
	Term           goto state 72
	Term1          goto state 44
	Term3          goto state 32
	Term2          goto state 40

State 59

	ListBinding -> Binding ListBinding .                (rule 18)

	'\\'           reduce using rule 18
	%eof           reduce using rule 18


State 60

	Term3 -> '(' Term . ')'                             (rule 31)

	')'            shift, and enter state 71


State 61

	TypedPattern -> Pattern ':' . FlanType              (rule 33)

	'('            shift, and enter state 18
	'['            shift, and enter state 19
	L_VarIdent     shift, and enter state 20

	VarIdent       goto state 14
	FlanType2      goto state 15
	FlanType1      goto state 16
	FlanType       goto state 70

State 62
